--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,7 @@
 ---
-title: Welcome to the privacy and security portal of Neferdata
+title: Privacy Portal
 description: Get started building your docs site with Starlight.
+
 
 template: splash
 hero:
@@ -18,7 +19,10 @@ hero:
     Starlight is a documentation template for Astro that comes with a
     beautiful design system out of the box.
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/logo.png
+    alt: Neferdata logo
+ 
+        
   actions:
     - text: Privacy Policy 
       link: /privacy/privacy/
@@ -48,3 +52,8 @@ Experience the same benefits of a dedicated & isolated instance without the IT o
 		Learn more in [our documentation](/privacy/privacy/) about how we handle your data and what we do to protect your privacy.
 	</Card>
 </CardGrid>
+
+
+---
+
+
